
2011-12-27  Carsten Haitzler (The Rasterman)

        * Add feature to get number of pressed devices (help fix
          ecore-evas bug).

2011-12-28  Carsten Haitzler (The Rasterman)

        * Add recursive name find function - evas_object_name_child_find()

2012-01-01  Carsten Haitzler (The Rasterman)

        * Improve CPU use on nvidia drivers when vsyncing. It was
          actually glXWaitGL() spinning, not glXSwapBuffers(), so this
          points to a bug in the nvidia drivers where the sleep logic
          in glXSwapBuffers() hasn't been transferred to glXWaitGL().
          Avoid use of glXWaitGL() to avoid the nvidia bug.

2012-01-02  Cedric Bail

	* Fix unitialized value when running generic loader without any
	application found to open the file.
	* Use Eina_File when openning XPM file.

2012-01-03  Cedric Bail

	* Use Eina_File for PSD file to.

2012-01-06  Sung W. Park (sung_)

        * Add EvasGL support to software backend using OSMesa.  Requires OSMesa
          library.  Due to caveats in OSMesa, surface config stays with a 
          context rather than with a surface.  So for now, the config of a 
          surface remains with the first context that it binds to.  May need
          to come up with a different solution in the near future.

2012-01-12  Sung W. Park (sung_)

	* Add new api evas_gl_config_new/free() to ensure backward compatibility.
          Previously, the user simply declared a Evas_GL_Config object but this
          can cause issues if new configs are added. Now we have evas allocate it
          for you.

2012-01-16  Raphael Kubo da Costa (rakuco)

	* Add evas_object_smart_callback_del_full() to allow users to
	unregister a specific smart event callback instead of all
	callbacks matching a given type and function pointer.
        
2012-01-17  Carsten Haitzler (The Rasterman)

        * Add EVAS_OBJECT_POINTER_MODE_NOGRAB_NO_REPEAT_UPDOWN pointer mode
        for some very specific behavior needed for accessibility.
